# dev_env

./: .bash_aliases  .kermrc  README.md  checkCPU.c  tree.ascii  tree.html
.vim/plugged/c-syntax.vim/after/syntax/: c.vim
config/: .asli_syntastic_c_config  .bash_aliases  .clang-format  .ideavimrc  .screenrc  .tmux.conf  .vimrc  Black_Settings.txt  gitignore  pyproject.toml  ruff.toml  settings.json  vim_bk.7z
script/: colors_and_formatting.sh
script/bash/: astyle-clean.sh  example.7z  kermit_load_img.ksc  load_fw.sh  load_img.sh  ls_usb_dev.sh  pishrink.sh  post_build.sh  simple_args_parsing.sh
script/bash/directory_and_file_operations/: duplicate_folder.sh  search_n_copy.sh
script/bash/directory_and_file_operations/save_20200923_160845/: Background_Normalized_NoSliderAdj_code.csv  Background_UnNormalized_NoSliderAdj_code.csv  Default Subtract_Normalized_NoSliderAdj_code.csv  Default Subtract_UnNormalized_NoSliderAdj_code.csv  Foreground_Normalized_NoSliderAdj_code.csv  Foreground_UnNormalized_NoSliderAdj_code.csv  device_config.txt
script/batch/jigbox/: jigbox_install.bat
script/jigbox/: jigbox initial flow.md
script/python/: calc_log_elapsed_time.py
